--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     {{content-for "body"}}
-
+    <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/solartrace.js"></script>
 
