--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   <body>
     {{content-for "body"}}
 
-    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKut1uYvkmwdV5r5Cx2qZRC4ibEodEdmI&callback=initMap" type="text/javascript"></script>-->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbWerkNiVcreviWE9fKSP-PQaSFw-tWY4&libraries=places" type="text/javascript"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/solartrace.js"></script>
 
