--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <body>
     {{content-for "body"}}
 
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/solartrace.js"></script>
 
